<resources>
    <string name="app_name">ITMOPlayer</string>
    <string name="user">My Profile</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="settings">Settings</string>
    <string name="app_login">App Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="account_question">Do you have an account?</string>
    <string name="login">SignIn</string>
    <string name="submit">Submit</string>
    <string name="error">*You must put all values in all filds</string>
    <string name="image_button">Choose your image</string>
    <string name="login_title">Authorization</string>
    <string name="user_title">Authorization</string>
    <string name="login_or_email">Put your own login or email</string>
    <string name="user_password">Put your own password</string>
    <string name="font_awesome_clock">&#xf017;</string>
    <string name="font_awesome_music">&#xf001;</string>
    <string name="font_awesome_user">&#xf2bd;</string>
    <string name="font_awesome_serch">&#xf002;</string>
    <string name="font_awesome_play">&#xf144;</string>
    <string name="font_awesome_pause">&#xf28b;</string>
    <string name="font_awesome_step_forward">&#xf051;</string>
    <string name="font_awesome_step_backward">&#xf048;</string>
    <string name="recently_played">Recently Played</string>
    <string name="playlists">Playlists</string>
    <string name="search_music">Search music…</string>
    <string name="edit">Edit</string>
    <string name="your_image">Your image</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="searching_results">Searching Results</string>
    <string name="recently_played">Recently Played</string>
</resources>
