<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginStart="30dp"/>

            <EditText
                android:id="@+id/f_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:textSize="20dp"
                tools:text="@tools:sample/first_names" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_name"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginStart="30dp"/>

            <EditText
                android:id="@+id/s_name"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                tools:text="@tools:sample/first_names"
                android:paddingLeft="15dp"
                android:importantForAutofill="no"
                android:inputType="text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginStart="30dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textSize="20dp"
                tools:text="@tools:sample/first_names" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/app_login"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/login"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:textSize="20dp"
                tools:text="@tools:sample/first_names" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginStart="30dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword"
                android:paddingLeft="15dp"
                android:textSize="20dp"
                tools:text="@tools:sample/first_names" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:layout_marginTop="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/your_image"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/image_user"
                android:layout_width="221dp"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

        <TextView
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit image"
            android:textSize="18dp"
            android:textColor="@color/blue"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            />

        <TextView
            android:id="@+id/error_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@color/blue"
            android:textSize="20dp"
            android:textAllCaps="false"
            android:layout_marginStart="30dp"
            android:layout_marginTop="7dp"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>