<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:text="@string/login_or_email"
        android:textColor="@color/black"
        android:textSize="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/user_login"
            android:layout_width="246dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="85dp"
            android:autofillHints="Sup_4eg"
            android:background="@drawable/edit_text_backgroud"
            android:inputType="textEmailSubject"
            tools:targetApi="o" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_password"
        android:textColor="@color/black"
        android:layout_marginLeft="85dp"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/user_password"
            android:layout_width="243dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="85dp"
            android:autofillHints="Sup_4eg"
            android:background="@drawable/edit_text_backgroud"
            android:inputType="textPassword"
            tools:targetApi="o" />

    </LinearLayout>

    <EditText
        android:id="@+id/regestration_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:background="@color/white"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:inputType="text" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textSize="20dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/blue"
        />
</LinearLayout>